fixed z-index on header

--- a/assets/styles/layouts/_header.scss
+++ b/assets/styles/layouts/_header.scss
@@ -12,98 +12,97 @@
 .drawer--navbarTopGutter {
     padding-top: 0;
 }
-header {
-	.drawer-navbar {
-		background: transparent;
-		border: none;
-		transition: .5s;
-		z-index: 99999;
-		&.drawer-navbar--fixed {
-			.drawer-container {
+
+.drawer-navbar {
+	background: transparent;
+	border: none;
+	transition: .5s;
+	z-index: 99999;
+	&.drawer-navbar--fixed {
+		.drawer-container {
+			display: flex;
+			justify-content: space-between;
+			.drawer-navbar-header {
+				background: transparent;
+				border: none;
+			}
+			.drawer-nav {
 				display: flex;
-				justify-content: space-between;
-				.drawer-navbar-header {
-					background: transparent;
-					border: none;
-				}
-				.drawer-nav {
+				flex-direction: column;
+				align-items: center;
+				background: transparent;
+			}
+			.drawer-menu {
+				flex: 1 0 auto;
+				display: flex;
+				flex-direction: row;
+				background: transparent;
+				li {
+					transition: .75s;
+					border-width: 4px 0 0;
+					border-color: transparent;
+					border-style: solid;
+					padding: 0 15px 4px;
+					font-family: "Raleway",Helvetica,Arial,sans-serif;
+					padding-left: 17px;
+					padding-right: 17px;
+					font-size: 13px;
+					font-weight: 600;
+					text-transform: uppercase;
+					letter-spacing: 1px;
 					display: flex;
-					flex-direction: column;
-					align-items: center;
-					background: transparent;
-				}
-				.drawer-menu {
 					flex: 1 0 auto;
-					display: flex;
-					flex-direction: row;
-					background: transparent;
-					li {
-						transition: .75s;
-						border-width: 4px 0 0;
-						border-color: transparent;
+					align-items: center;
+					&:hover {
+						border-color: #05c4eb;
 						border-style: solid;
-						padding: 0 15px 4px;
-						font-family: "Raleway",Helvetica,Arial,sans-serif;
-						padding-left: 17px;
-						padding-right: 17px;
-						font-size: 13px;
-						font-weight: 600;
-						text-transform: uppercase;
-						letter-spacing: 1px;
-						display: flex;
-						flex: 1 0 auto;
-						align-items: center;
+					}
+					a {
+						color: white;
+					}
+				}
+				@include breakpoint(ipad_side, max-width) {
+					flex-direction: column;
+					background: white;
+					width: 100%;
+					padding: 0px;
+					li {
+						&:nth-child(odd) {
+							background: #f3f3f3;
+						}
 						&:hover {
-							border-color: #05c4eb;
-							border-style: solid;
+							border-color: transparent;
 						}
 						a {
-							color: white;
-						}
-					}
-					@include breakpoint(ipad_side, max-width) {
-						flex-direction: column;
-						background: white;
-						width: 100%;
-						padding: 0px;
-						li {
-							&:nth-child(odd) {
-								background: #f3f3f3;
-							}
-							&:hover {
-								border-color: transparent;
-							}
-							a {
-								color: black;
-								padding: 20px;
-								width: 100%;
-							}
+							color: black;
+							padding: 20px;
+							width: 100%;
 						}
 					}
 				}
 			}
 		}
-		.dark-logo {
+	}
+	.dark-logo {
+		display: none;
+	}
+	&.danzerpress-trans {
+		.drawer-hamburger-icon, .drawer-hamburger-icon:after, .drawer-hamburger-icon:before {
+			background: white;
+		}
+	}
+	&.danzerpress-non-trans {
+		background: #fff;
+		box-shadow: 1px 1px 10px rgba(0, 0, 0, 0.078);
+		.light-logo {
 			display: none;
 		}
-		&.danzerpress-trans {
-			.drawer-hamburger-icon, .drawer-hamburger-icon:after, .drawer-hamburger-icon:before {
-				background: white;
-			}
+		.dark-logo {
+			display: block;
 		}
-		&.danzerpress-non-trans {
-			background: #fff;
-			box-shadow: 1px 1px 10px rgba(0, 0, 0, 0.078);
-			.light-logo {
-				display: none;
-			}
-			.dark-logo {
-				display: block;
-			}
-			li {
-				a {
-					color: black !important;
-				}
+		li {
+			a {
+				color: black !important;
 			}
 		}
 	}
